[package]
name = "canparse"
version = "0.1.2"
authors = ["jmagnuson"]
description = "A CAN signal and definition parser"
repository = "https://github.com/jmagnuson/canparse"
documentation = "https://docs.rs/canparse"
readme = "README.md"
keywords = ["can", "socketcan", "j1939", "dbc", "parser"]
license = "MIT/Apache-2.0"

[lib]
name = "canparse"
path = "src/lib.rs"

[features]
default = []
use-socketcan = ["socketcan"]

[dependencies]
rustc-serialize = "0.3.24"
regex = "0.2.2"
lazy_static = "0.2.8"
enum_primitive = "0.1.1"
num = "0.1.37"
byteorder = "1.0.0"
socketcan = { version = "1.6.0", optional = true }

[dev-dependencies]
time = "0.1.37"
rand = "0.3"

[package.metadata.docs.rs]
features = ["use-socketcan"]

[badges]
travis-ci = { repository = "jmagnuson/canparse" }
codecov = { repository = "jmagnuson/canparse", branch = "master", service = "github" }
