[package]
name = "canparse"
version = "0.1.4"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>"]
description = "A CAN signal and definition parser"
repository = "https://github.com/jmagnuson/canparse"
documentation = "https://docs.rs/canparse"
readme = "README.md"
keywords = ["can", "socketcan", "j1939", "dbc", "parser"]
license = "MIT/Apache-2.0"

[lib]
name = "canparse"
path = "src/lib.rs"

[features]
default = []
use-socketcan = ["socketcan"]

[dependencies]
encoding = "0.2"
enum_primitive = "0.1"
byteorder = "1.3"
socketcan = { version = "1.7", optional = true }
nom = "4.2"

[dev-dependencies]
lazy_static = "1.3"

[package.metadata.docs.rs]
features = ["use-socketcan"]

[badges]
travis-ci = { repository = "jmagnuson/canparse" }
codecov = { repository = "jmagnuson/canparse", branch = "master", service = "github" }
